[package]
name = "krcli"
version = "0.1.1"
description = "A command line interface for keyring"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://www.atareao.es"
readme = "README.md"
repository = "https://githbub.com/atareao/krcli"
keywords = ["cli", "keyring"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "0.10.1"
clap = "2.33.3"
exitcode = "1.1.2"
